tests/neg/inlineAccess/C_1.scala
package p
private class D
class C {
  inline def inl(): Unit = {
    val d = new D()
  }
}

